# attendancebackend

./: .dockerignore  Dockerfile  Dockerfile.test  README.md  app.py  docker-compose.yml  main.py  model.py  pyproject.toml  requirements.txt  testmongo.py  testws.html  wstest.py
k8s/: configmap.yml  deployment.yml  hpa.yml  ingress.yml  namespace.yml  secret.yml  service.yml
