[project]
name = "attendencebackend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bcrypt>=5.0.0",
    "dotenv>=0.9.9",
    "fastapi>=0.128.0",
    "pydantic[email]>=2.12.5",
    "pyjwt>=2.10.1",
    "pymongo>=4.15.5",
    "uvicorn[standard]>=0.40.0",
]
